<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_back"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/AutthorizedLog"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/inputLog"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/AutthorizedLog"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white_milk"
        android:hint="@string/login"
        android:textSize="32sp"
        android:inputType="text"/>



    <EditText
        android:id="@+id/inputPass"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/inputLog"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white_milk"
        android:hint="@string/password"
        android:textSize="32sp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnStart"

        android:layout_centerHorizontal="true"
        android:layout_below="@+id/inputPass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:shadowRadius="15"
        android:hint="@string/authorize"
        android:textSize="17sp"
        />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Author"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:textColor="@color/white"/>





  </RelativeLayout>