<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductsTakerActivity"
    android:orientation="vertical"
    android:theme="@style/Theme.ProductNotes.NoActionBar"
    android:background="@color/oliva"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_CreateProductNotes"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_oliva">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ic_save_create_product_list"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:src="@drawable/ic_save_notes"
                android:padding="7dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/create_product_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_product_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:singleLine="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/bar_title_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/product_name"
            android:textSize="14sp" />

        <TextView
        android:id="@+id/bar_isBuy_status"
        android:layout_width="50dp"
        android:layout_marginRight="12dp"
        android:layout_alignParentRight="true"
        android:text="Статус"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/bar_isBuy_status"
        android:layout_marginRight="55dp"
        android:gravity="center"
        android:text="@string/quantity"
        android:textSize="14sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerProductsTaker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp">

    </androidx.recyclerview.widget.RecyclerView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/taker_add_product_card"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_action_add"
            android:text="+"
            android:background="@drawable/btn_custom"
            android:textSize="38sp" />

    </RelativeLayout>




</LinearLayout>